--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,10 @@ body {
   padding: 0 4em;
 }
 
+button {
+  font-family: "Montserrat", sans-serif;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -14,4 +18,6 @@ code {
 
 :root {
   --background-color: #060b1c;
+  --purple-color: #a20aff;
+  --green-color: #46fe6e;
 }
