--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -5,6 +5,35 @@
     display: flex;
     margin-top: 3em;
     width: 100%;
-    gap: 3%;
+    gap: 7%;
+  }
+
+  &__accounts-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  &__accounts-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    p {
+      font-size: 1.5em;
+      font-weight: 600;
+      color: white;
+    }
+  }
+
+  &__rpc {
+    display: flex;
+    gap: 0;
+  }
+
+  &__accounts {
+    padding: 2em;
+    border-radius: 4px;
+    border: 1px solid rgba(67, 198, 21, 0.36);
   }
 }
