added modal for new account creation

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,4 +20,5 @@ code {
   --background-color: #060b1c;
   --purple-color: #a20aff;
   --green-color: #46fe6e;
+  --modal-background-color: #0c121d;
 }
