--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -36,4 +36,16 @@
     border-radius: 4px;
     border: 1px solid rgba(67, 198, 21, 0.36);
   }
+
+  &__add-new-account {
+    margin-top: 2em;
+    color: white;
+    background: transparent;
+    font-size: 1em;
+    cursor: pointer;
+    border: 1px solid rgba(67, 198, 21, 0.36);
+    border-radius: 4px;
+    padding: 0.5em;
+    float: right;
+  }
 }
