--- a/src/components/Accounts/AddAccountModal/AddAccount.scss
+++ b/src/components/Accounts/AddAccountModal/AddAccount.scss
@@ -16,4 +16,11 @@
       width: 50%;
     }
   }
+
+  &__buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 1em;
+  }
 }
