wip:somehow parsed idl

--- a/src/components/Buttons/ExitButton.scss
+++ b/src/components/Buttons/ExitButton.scss
@@ -1,10 +1,11 @@
 .exit-button {
-  font-size: 0.8em;
   color: white;
   font-weight: bold;
   border: 1px solid white;
   border-radius: 4px;
   background: transparent;
-  padding: 0.5em 1em;
   cursor: pointer;
+  padding: 0.5em;
+  font-size: 0.8em;
+  height: 3em;
 }
