--- a/src/components/Buttons/SubmitButton.scss
+++ b/src/components/Buttons/SubmitButton.scss
@@ -1,10 +1,11 @@
 .submit-button {
-  padding: 0.5em 1em;
   background-color: var(--green-boder);
   color: black;
   font-weight: bold;
   font-size: 0.8em;
+  padding: 0.5em;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  height: 3em;
 }
