--- a/src/index.scss
+++ b/src/index.scss
@@ -16,8 +16,18 @@ code {
     monospace;
 }
 
-p {
+p,
+button {
   margin: 0;
+  padding: 0;
+}
+
+textarea {
+  height: 10em;
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid rgba(169, 61, 255, 0.36);
+  color: white;
 }
 
 :root {
