--- a/src/components/Programs/ProgramItem/ProgramItem.scss
+++ b/src/components/Programs/ProgramItem/ProgramItem.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
+  margin-bottom: 1em;
   &__collapsed {
     display: flex;
     justify-content: space-between;
