--- a/src/components/Buttons/SubmitButton.scss
+++ b/src/components/Buttons/SubmitButton.scss
@@ -1,5 +1,5 @@
 .submit-button {
-  background-color: var(--green-boder);
+  background-color: var(--green-color);
   color: black;
   font-weight: bold;
   font-size: 0.8em;
