--- a/src/components/GeneratePdaModal/GeneratePda.scss
+++ b/src/components/GeneratePdaModal/GeneratePda.scss
@@ -11,7 +11,7 @@
   }
 
   input {
-    width: 100%;
+    width: 97.5%;
     background-color: transparent;
     border: 1px solid var(--green-color);
     border-radius: 4px;
@@ -42,17 +42,25 @@
   &__seed-item {
     display: flex;
     flex-direction: column;
-
-    padding: 0.5em;
-
+    border-radius: 4px;
+    align-items: flex-end;
+    margin-bottom: 1em;
     img {
       width: 1.5em;
-      float: right;
+      cursor: pointer;
     }
-    div {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
+  }
+  &__label-input {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+  &__pda-data {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 67.5% 30%;
+    align-items: center;
+    column-gap: 2.5%;
   }
 }
