successfully fetched account and showed its data

--- a/src/components/GeneratePdaModal/GeneratePda.scss
+++ b/src/components/GeneratePdaModal/GeneratePda.scss
@@ -63,4 +63,10 @@
     align-items: center;
     column-gap: 2.5%;
   }
+
+  &__error {
+    color: var(--red-color);
+    font-weight: bold;
+    font-size: 0.8em;
+  }
 }
