--- a/src/components/Programs/ProgramInstructions/InstructionData/InstructionData.scss
+++ b/src/components/Programs/ProgramInstructions/InstructionData/InstructionData.scss
@@ -4,10 +4,12 @@
   gap: 1em;
   align-items: flex-start;
   color: white;
+  padding: 1em;
 
   &__fields {
     display: grid;
     grid-template-columns: repeat(3, 30%);
     column-gap: 3%;
+    width: 100%;
   }
 }
