--- a/src/components/GeneratePdaModal/GeneratePda.scss
+++ b/src/components/GeneratePdaModal/GeneratePda.scss
@@ -68,7 +68,13 @@
     width: 100%;
     display: grid;
     grid-template-columns: 67.5% 30%;
-    align-items: center;
+    column-gap: 2.5%;
+  }
+
+  &__with-pubkey {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 37.5% 30% 30%;
     column-gap: 2.5%;
   }
 
