--- a/src/components/Programs/Assertions/Assertions.scss
+++ b/src/components/Programs/Assertions/Assertions.scss
@@ -4,12 +4,26 @@
   flex-direction: column;
   gap: 2em;
   padding: 1em;
-  width: 100%;
 
   &__item {
     display: flex;
     flex-direction: column;
     grid-area: 1em;
     width: 100%;
+  }
+
+  button {
+    margin-top: 5em;
+  }
+
+  &__title-button {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+
+    button {
+      width: 15em;
+    }
   }
 }
