--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -4,6 +4,8 @@
   cursor: pointer;
   font-weight: 500;
   padding: 0.25em 0.5em;
+  display: flex;
+  gap: 0.25em;
 
   &__active {
     background-color: var(--green-color);
