prepared for assertions implementation

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,7 +14,8 @@
       gap: 1em;
       list-style: none;
       align-items: center;
-      li {
+      li,
+      a {
         color: white;
         font-size: 1.15em;
         cursor: pointer;
