--- a/src/components/Programs/ProgramInstructions/ProgramInstructionItem/ProgramInstructionItem.scss
+++ b/src/components/Programs/ProgramInstructions/ProgramInstructionItem/ProgramInstructionItem.scss
@@ -33,4 +33,21 @@
       opacity: 0.7;
     }
   }
+
+  &__clear-btn {
+    display: flex;
+    gap: 0.25em;
+    font-size: 0.8em;
+    padding: 1em 0.5em;
+    border: 1px solid white;
+    color: white;
+    border-radius: 4px;
+    background: transparent;
+    cursor: pointer;
+  }
+
+  &__clear {
+    display: flex;
+    gap: 0.5em;
+  }
 }
