--- a/src/components/Accounts/RpcChip/RpcChip.scss
+++ b/src/components/Accounts/RpcChip/RpcChip.scss
@@ -3,8 +3,7 @@
   cursor: pointer;
   font-size: 0.5em;
   border-radius: 4px;
-  padding: 0 0.5em;
-
+  padding: 1em;
   &-active {
     border: 1px solid rgba(169, 61, 255, 0.66);
   }
