--- a/src/components/Buttons/SubmitButton.scss
+++ b/src/components/Buttons/SubmitButton.scss
@@ -8,4 +8,8 @@
   border-radius: 4px;
   cursor: pointer;
   height: 3em;
+  min-width: 7em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
