--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -1,15 +1,15 @@
 .tooltip {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   position: relative;
-
+  display: flex;
+  flex-direction: column;
   &__text {
     border-radius: 8px;
     background-color: var(--modal-background-color);
     position: absolute;
-    left: -120%;
     top: -200%;
+    left: -400%;
+    text-align: center;
+    width: 20em;
     color: white;
     padding: 0.75em;
     p {
