added errors when pda is not valid

--- a/src/components/Accounts/AddAccountModal/AddKeypair/GrindKeypair/GrindKeypair.scss
+++ b/src/components/Accounts/AddAccountModal/AddKeypair/GrindKeypair/GrindKeypair.scss
@@ -16,6 +16,9 @@
     border-radius: 4px;
     cursor: pointer;
     padding: 0.5em;
+    p {
+      color: var(--green-color);
+    }
   }
 
   &__input {
