--- a/src/components/Accounts/AddAccountModal/AddPubkey/AddPubkey.scss
+++ b/src/components/Accounts/AddAccountModal/AddPubkey/AddPubkey.scss
@@ -10,8 +10,19 @@
     width: 100%;
   }
   &__item-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  &__item-data {
     display: grid;
     grid-template-columns: 54% 39%;
     column-gap: 4%;
+    width: 100%;
+  }
+  img {
+    cursor: pointer;
+    width: 2em;
   }
 }
