--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -12,14 +12,12 @@
   }
 
   &__accounts-list {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     width: 100%;
   }
 
   &__accounts-header {
     display: flex;
+    margin-bottom: 1em;
     justify-content: space-between;
     align-items: center;
     p {
