--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,11 +3,13 @@
   width: 100%;
   justify-content: space-between;
   padding-top: 1em;
+  align-items: center;
 
-  h1 {
-    color: white;
+  img {
+    width: 10em;
+    height: 3em;
+    cursor: pointer;
   }
-
   &__navbar {
     ul {
       display: flex;
